man page translations: update Belarusian

--- a/doc/man/po4a/po/be.po
+++ b/doc/man/po4a/po/be.po
@@ -2619,10 +2619,8 @@ msgstr "<option>--attach-file</option> <parameter>імя-файла</parameter>,
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Стварае далучэнне ўнутры файла &matroska;. Перад выкарыстаннем гэтага параметра неабходна задаць тып <abbrev>MIME</abbrev>. Розніца між гэтымі дзвюма формамі заключаецца ў тым, што пры падзеле файлы, далучаныя праз <option>--attach-file</option>, далучаюцца да ўсіх зыходных файлаў, а файлы, далучаныя праз <option>--attach-file-once</option>, далучаюцца толькі да першага створанага файла. Калі падзел не выкарыстоўваецца, то абодва робяць адно і тое ж."
+msgstr "Стварае файл-далучэнне ўнутры файла &matroska;. Розніца між дзвюма формамі ў тым, што пры разбіцці файлы, далучаныя праз <option>--attach-file</option>, далучаюцца да ўсіх выхадных файлаў, а файлы, далучаныя праз <option>--attach-file-once</option>, далучаюцца толькі да першага створанага файла. Калі разбіццё не выкарыстоўваецца, абодва варыянты працуюць аднолькава."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
