man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -2634,10 +2634,8 @@ msgstr "<option>--attach-file</option> <parameter>nombre-archivo</parameter>, <o
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Crea un archivo adjunto dentro del archivo &matroska;. El tipo <abbrev>MIME</abbrev> debe establecerse antes de que esta opción pueda ser utilizada. La diferencia entre las dos formas es que durante la división los archivos adjuntos con <option>--attach-file</option> son adjuntados a todos los archivos de salida mientras que con <option>--attach-file-once</option> tan sólo se adjuntan al primer archivo creado. Si no se usa la división entonces ambas opciones hacen lo mismo. "
+msgstr "Crea un archivo adjunto dentro del archivo &matroska;. La diferencia entre las dos formas es que durante la división, los archivos adjuntos con <option>--adjuntar-archivos</option> se adjuntan a todos los archivos de salida, mientras que los adjuntos con <option>--adjuntar-archivo-una-vez</option> solo se adjuntan al primer archivo creado. Si no se usa la división, ambas formas hacen lo mismo."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
