--- a/doc/man/po4a/po/de.po
+++ b/doc/man/po4a/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: mkvtoolnix\n"
 "Report-Msgid-Bugs-To: mo@bunkus.online\n"
 "POT-Creation-Date: 2024-12-27 18:30+0100\n"
-"PO-Revision-Date: 2024-10-18 21:47+0200\n"
+"PO-Revision-Date: 2024-12-27 18:57+0100\n"
 "Last-Translator: Moritz Bunkus <mo@bunkus.online>\n"
 "Language-Team: German <mo@bunkus.online>\n"
 "Language: de\n"
@@ -36,10 +36,8 @@ msgstr "88.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2024-09-07"
 msgid "2024-10-19"
-msgstr "2024-09-07"
+msgstr "2024-10-19"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -3654,13 +3652,13 @@ msgstr "Liest zusätzliche Befehlszeilenargumente aus der Datei <parameter>Optio
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2391
 msgid "If you want to use the <literal>@</literal> sign as the first character in the argument to an option such as '<literal>--title</literal>', you have to escape it with a second <literal>@</literal> sign. Example:"
-msgstr ""
+msgstr "Wenn Sie das <literal>@</literal>-Zeichen als ersten Buchstaben in einem Argument für eine Option wie »<literal>--title</literal>« nutzen wollen, so müssen Sie es mit einem zweiten <literal>@</literal>-Zeichen maskieren. Beispiel:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><screen>
 #: doc/man/mkvmerge.xml:2395
 #, no-wrap
 msgid "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
-msgstr ""
+msgstr "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2400
