--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-12-27 18:30+0100\n"
+"POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2022-03-08 08:07+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "88.0"
-msgstr "88.0"
+msgid "89.0"
+msgstr "89.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -39,9 +39,9 @@ msgstr "88.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2020-09-06"
-msgid "2024-10-19"
-msgstr "2020-08-02"
+#| msgid "2021-12-27"
+msgid "2024-12-27"
+msgstr "2021-12-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5738,6 +5738,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2020-09-06"
+#~ msgid "2024-10-19"
+#~ msgstr "2020-08-02"
+
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
@@ -5749,9 +5753,6 @@ msgstr ")"
 #~| msgid "2022-02-06"
 #~ msgid "2022-11-13"
 #~ msgstr "2022-02-06"
-
-#~ msgid "2021-12-27"
-#~ msgstr "2021-12-27"
 
 #~ msgid "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
 #~ msgstr "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
