--- a/doc/man/po4a/po/pl.po
+++ b/doc/man/po4a/po/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.5.0\n"
-"POT-Creation-Date: 2024-12-27 18:30+0100\n"
+"POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022-2023\n"
 "Language-Team: Polish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pl/)\n"
@@ -28,7 +28,7 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "88.0"
+msgid "89.0"
 msgstr ""
 
 #. type: Content of the date entity
@@ -37,8 +37,10 @@ msgstr ""
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-10-19"
-msgstr ""
+#, fuzzy
+#| msgid "2023-12-02"
+msgid "2024-12-27"
+msgstr "2015-10-17"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5819,10 +5821,6 @@ msgstr ")"
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
-
-#~| msgid "2021-12-27"
-#~ msgid "2023-12-02"
-#~ msgstr "2015-10-17"
 
 #~ msgid "<option>--blockadd</option> <parameter>TID:level</parameter>"
 #~ msgstr "<option>--blockadd</option> <parameter>TID:poziom</parameter>"
