--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-12-27 18:30+0100\n"
+"POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Andrei Stepanov, 2018-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "88.0"
-msgstr "88.0"
+msgid "89.0"
+msgstr "89.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -39,9 +39,9 @@ msgstr "88.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
-#| msgid "2024-07-13"
-msgid "2024-10-19"
-msgstr "2024-06-02"
+#| msgid "2021-12-27"
+msgid "2024-12-27"
+msgstr "2021-12-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5784,6 +5784,10 @@ msgstr "("
 msgid ")"
 msgstr ")"
 
+#~| msgid "2024-07-13"
+#~ msgid "2024-10-19"
+#~ msgstr "2024-06-02"
+
 #~ msgid "2024-09-07"
 #~ msgstr "2024-09-07"
 
@@ -5810,9 +5814,6 @@ msgstr ")"
 
 #~ msgid "The segment info XML files"
 #~ msgstr "XML-файлы информации о сегментах"
-
-#~ msgid "2021-12-27"
-#~ msgstr "2021-12-27"
 
 #~ msgid "2021-08-30"
 #~ msgstr "2021-08-30"
