--- a/doc/man/po4a/po/uk.po
+++ b/doc/man/po4a/po/uk.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 4.4.0\n"
-"POT-Creation-Date: 2024-12-27 18:30+0100\n"
+"POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2024-11-14 19:52+0100\n"
 "Last-Translator: Oleh Hishak, 2024\n"
 "Language-Team: Ukrainian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/uk/)\n"
@@ -25,8 +25,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "88.0"
-msgstr "88.0"
+msgid "89.0"
+msgstr "89.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -34,8 +34,10 @@ msgstr "88.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-10-19"
-msgstr ""
+#, fuzzy
+#| msgid "2023-12-02"
+msgid "2024-12-27"
+msgstr "2021-12-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5781,10 +5783,6 @@ msgstr ")"
 #~| msgid "<productname>Matroska</productname>"
 #~ msgid "<productname>MakeMKV</productname>"
 #~ msgstr "<productname>Matroska</productname>"
-
-#~| msgid "2021-12-27"
-#~ msgid "2023-12-02"
-#~ msgstr "2021-12-27"
 
 #~ msgid "<option>--blockadd</option> <parameter>TID:level</parameter>"
 #~ msgstr "<option>--blockadd</option> <parameter>TID:level</parameter>"
