--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (89.0-0~bunkus01) oracular; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Fri, 27 Dec 2024 19:32:40 +0100
+
 mkvtoolnix (88.0-0~bunkus01) oracular; urgency=low
 
   * New version.
