program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-12-27 18:54+0100\n"
-"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"PO-Revision-Date: 2025-01-15 21:31+0100\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
@@ -12269,19 +12269,19 @@ msgid "Text files"
 msgstr "Fitxers de text"
 
 #: src/merge/timestamp_factory.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The 'assume' key must be set to the default number of frames per second."
-msgstr "El fitxer del codi de temps «{0}» no conté una línia «Assume» vàlida amb el nombre de fotogrames per segon predeterminat.\n"
+msgstr "La clau «assume» s'ha d'establir amb el nombre predeterminat de fotogrames per segon."
 
 #: src/merge/timestamp_factory.cpp:244
 #, no-c-format
 msgid "The 'ranges' key must exist & be an array."
-msgstr ""
+msgstr "La clau «ranges» ha d'existir i ser una matriu."
 
 #: src/merge/timestamp_factory.cpp:366
 #, no-c-format
 msgid "The 'timestamps' key must exist & be an array."
-msgstr ""
+msgstr "La clau «timestamps» ha d'existir i ser una matriu."
 
 #: src/input/r_vobsub.cpp:257
 #, no-c-format
@@ -13606,7 +13606,7 @@ msgstr "El valor de la propietat no és un enter sense signe vàlid a «{0}». {
 #: src/merge/timestamp_factory.cpp:254
 #, no-c-format, c++-format
 msgid "The range number {0} must be an object with keys 'start', 'end' & 'fps'."
-msgstr ""
+msgstr "El número d'interval {0} ha de ser un objecte amb les claus «start», «end» i «fps»."
 
 #: src/merge/output_control.cpp:1087
 #, no-c-format
@@ -13833,14 +13833,14 @@ msgstr "El fitxer del codi de temps «{0}» no conté cap entrada vàlida.\n"
 #: src/merge/timestamp_factory.cpp:254
 #: src/merge/timestamp_factory.cpp:366
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp file '{0}' is invalid: {1}\n"
-msgstr "El fitxer del codi de temps «{0}» no conté cap entrada vàlida.\n"
+msgstr "El fitxer del codi de temps «{0}» no és vàlid: {1}\n"
 
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp number {0} must be an integer or floating point number."
-msgstr "La línia {0} del fitxer del codi de temps «{1}» no conté un nombre decimal vàlid.\n"
+msgstr "El número d'interval {0} ha de ser un nombre enter o de coma flotant."
 
 #: src/merge/timestamp_factory.cpp:309
 #, no-c-format, c++-format
