program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -12313,19 +12313,19 @@ msgid "Text files"
 msgstr "Archivos de texto"
 
 #: src/merge/timestamp_factory.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The 'assume' key must be set to the default number of frames per second."
-msgstr "El archivo del código de tiempo '{0}' no contiene una línea válida con la palabra «Assume», la cual define el número de fotogramas por segundo predeterminados.\n"
+msgstr "La tecla 'asumir' debe configurarse con el número predeterminado de cuadros por segundo."
 
 #: src/merge/timestamp_factory.cpp:244
 #, no-c-format
 msgid "The 'ranges' key must exist & be an array."
-msgstr ""
+msgstr "La clave 'rangos' debe existir y ser una matriz."
 
 #: src/merge/timestamp_factory.cpp:366
 #, no-c-format
 msgid "The 'timestamps' key must exist & be an array."
-msgstr ""
+msgstr "La clave 'códigos de tiempo' debe existir y ser una matriz."
 
 #: src/input/r_vobsub.cpp:257
 #, no-c-format
@@ -13651,7 +13651,7 @@ msgstr "El valor de la propiedad no es un entero sin signo válido en '{0}'. {1}
 #: src/merge/timestamp_factory.cpp:254
 #, no-c-format, c++-format
 msgid "The range number {0} must be an object with keys 'start', 'end' & 'fps'."
-msgstr ""
+msgstr "El número de rango {0} debe ser un objeto con claves 'inicio', 'fin' y 'fps'."
 
 #: src/merge/output_control.cpp:1087
 #, no-c-format
@@ -13878,14 +13878,14 @@ msgstr "El archivo del código de tiempo '{0}' no contiene ningún registro vál
 #: src/merge/timestamp_factory.cpp:254
 #: src/merge/timestamp_factory.cpp:366
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp file '{0}' is invalid: {1}\n"
-msgstr "El archivo del código de tiempo '{0}' no contiene ningún registro válido.\n"
+msgstr "El archivo de código de tiempo '{0}' no es válido: {1}\n"
 
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp number {0} must be an integer or floating point number."
-msgstr "La línea {0} del archivo del código de tiempo '{1}' no contiene un número decimal válido.\n"
+msgstr "El número de código de tiempo {0} debe ser un número entero o de punto flotante."
 
 #: src/merge/timestamp_factory.cpp:309
 #, no-c-format, c++-format
