program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -3809,7 +3809,7 @@ msgstr "Tou&jours utiliser l'action sélectionnée ci-dessus et ne plus redemand
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1049
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Toujours"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -8412,7 +8412,7 @@ msgstr "Les fichiers d'options JSON doivent contenir un tableau composé uniquem
 #: src/merge/timestamp_factory.cpp:97
 #, no-c-format
 msgid "JSON timestamp files must contain a JSON object with a 'version' key.\n"
-msgstr ""
+msgstr "Les fichiers d'horodatage JSON doivent contenir un objet JSON avec une clé « version ».\n"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:675
 #, no-c-format
@@ -12230,19 +12230,19 @@ msgid "Text files"
 msgstr "Fichiers texte"
 
 #: src/merge/timestamp_factory.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The 'assume' key must be set to the default number of frames per second."
-msgstr "Le fichier d'horodatages « {0} » ne contient pas de ligne « Assume » valide avec le nombre par défaut de trames par seconde.\n"
+msgstr "La clé « assume » doit être définie selon le nombre par défaut de trames par seconde."
 
 #: src/merge/timestamp_factory.cpp:244
 #, no-c-format
 msgid "The 'ranges' key must exist & be an array."
-msgstr ""
+msgstr "La clé « ranges » doit exister et être un tableau."
 
 #: src/merge/timestamp_factory.cpp:366
 #, no-c-format
 msgid "The 'timestamps' key must exist & be an array."
-msgstr ""
+msgstr "La clé « timestamps » doit exister et être un tableau."
 
 #: src/input/r_vobsub.cpp:257
 #, no-c-format
@@ -13574,7 +13574,7 @@ msgstr "La valeur de la propriété n'est pas un nombre entier non signé valide
 #: src/merge/timestamp_factory.cpp:254
 #, no-c-format, c++-format
 msgid "The range number {0} must be an object with keys 'start', 'end' & 'fps'."
-msgstr ""
+msgstr "La plage {0} doit être un objet avec les clés « start », « end » et « fps »."
 
 #: src/merge/output_control.cpp:1087
 #, no-c-format
@@ -13801,14 +13801,14 @@ msgstr "Le fichier d'horodatages « {0} » ne contient pas d'entrée valide.\n"
 #: src/merge/timestamp_factory.cpp:254
 #: src/merge/timestamp_factory.cpp:366
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp file '{0}' is invalid: {1}\n"
-msgstr "Le fichier d'horodatages « {0} » ne contient pas d'entrée valide.\n"
+msgstr "Le fichier d'horodatage « {0} » est invalide : {1}\n"
 
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp number {0} must be an integer or floating point number."
-msgstr "La ligne {0} du fichier d'horodatages « {1} » ne contient pas un nombre décimal valide.\n"
+msgstr "L'horodatage {0} doit être un entier ou un nombre en virgule flottante."
 
 #: src/merge/timestamp_factory.cpp:309
 #, no-c-format, c++-format
