man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -3649,13 +3649,13 @@ msgstr "Lit les arguments additionnels de ligne de commande depuis le fichier <p
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2391
 msgid "If you want to use the <literal>@</literal> sign as the first character in the argument to an option such as '<literal>--title</literal>', you have to escape it with a second <literal>@</literal> sign. Example:"
-msgstr ""
+msgstr "Pour utiliser le signe <literal>@</literal> comme premier caractère de l'argument d'une option telle que « <literal>--title</literal> », il faut l'échapper avec un second signe <literal>@</literal>. Exemple :"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><screen>
 #: doc/man/mkvmerge.xml:2395
 #, no-wrap
 msgid "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
-msgstr ""
+msgstr "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2400
