program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -3820,7 +3820,7 @@ msgstr "&Usa sempre l'azione selezionata sopra e non chiedere nuovamente"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1049
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Sempre"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -8428,7 +8428,7 @@ msgstr "L'opzione JSON deve contenere una matrice JSON consistente in sole strin
 #: src/merge/timestamp_factory.cpp:97
 #, no-c-format
 msgid "JSON timestamp files must contain a JSON object with a 'version' key.\n"
-msgstr ""
+msgstr "I file JSON data/ora devono contenere un oggetto JSON con una chiave \"versione\".\n"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:675
 #, no-c-format
@@ -12255,19 +12255,19 @@ msgid "Text files"
 msgstr "File di testo"
 
 #: src/merge/timestamp_factory.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The 'assume' key must be set to the default number of frames per second."
-msgstr "Il file timestamp '{0}' non contiene una linea 'Assume' valida con il numero predefinito di frame per secondo.\n"
+msgstr "La chiave 'assumi' deve essere impostata sul numero predefinito di fotogrammi al secondo."
 
 #: src/merge/timestamp_factory.cpp:244
 #, no-c-format
 msgid "The 'ranges' key must exist & be an array."
-msgstr ""
+msgstr "La chiave 'intervallo' deve esistere ed essere un array."
 
 #: src/merge/timestamp_factory.cpp:366
 #, no-c-format
 msgid "The 'timestamps' key must exist & be an array."
-msgstr ""
+msgstr "La chiave 'data/ora' deve esistere ed essere un array."
 
 #: src/input/r_vobsub.cpp:257
 #, no-c-format
@@ -13598,7 +13598,7 @@ msgstr "Il valore non è un intero senza segno valido in '{0}'. {1}\n"
 #: src/merge/timestamp_factory.cpp:254
 #, no-c-format, c++-format
 msgid "The range number {0} must be an object with keys 'start', 'end' & 'fps'."
-msgstr ""
+msgstr "Il numero dell'intervallo {0} deve essere un oggetto con le chiavi 'inizio', 'fine' e 'fps'."
 
 #: src/merge/output_control.cpp:1087
 #, no-c-format
@@ -13827,14 +13827,14 @@ msgstr "Il file delle marche temporali '{0}' non contiene alcun elemento valido.
 #: src/merge/timestamp_factory.cpp:254
 #: src/merge/timestamp_factory.cpp:366
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp file '{0}' is invalid: {1}\n"
-msgstr "Il file delle marche temporali '{0}' non contiene alcun elemento valido.\n"
+msgstr "Il file data/ora '{0}' non è valido: {1}\n"
 
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp number {0} must be an integer or floating point number."
-msgstr "La linea {0} del timestamp '{1}' non contiene un numero in virgola mobile valido.\n"
+msgstr "Il numero data/ora {0} deve essere un numero intero o in virgola mobile."
 
 #: src/merge/timestamp_factory.cpp:309
 #, no-c-format, c++-format
