--- a/po/nb.po
+++ b/po/nb.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-12-27 18:54+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Roger Knutsen, 2024\n"
+"Last-Translator: Roger Knutsen, 2024-2025\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/nb/)\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
@@ -3794,7 +3794,7 @@ msgstr "Bruk allt&id handlingen som er valgt ovenfor, og ikke spør igjen"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1049
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Alltid"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -8395,7 +8395,7 @@ msgstr "JSON-alternativfiler må inneholde en JSON-tabell som bare består av JS
 #: src/merge/timestamp_factory.cpp:97
 #, no-c-format
 msgid "JSON timestamp files must contain a JSON object with a 'version' key.\n"
-msgstr ""
+msgstr "JSON-tidsstempelfiler må inneholde en JSON-objekt med en 'versjons'-nøkkel'.\n"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:675
 #, no-c-format
@@ -12200,19 +12200,19 @@ msgid "Text files"
 msgstr "Tekstfiler"
 
 #: src/merge/timestamp_factory.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The 'assume' key must be set to the default number of frames per second."
-msgstr "Tidsstempelfilen '{0}' inneholder ikke en gyldig 'Anta' linje med standard antall bilder per sekund.\n"
+msgstr "'Anta'-nøkkelen må settes til standard antall bilder per sekund."
 
 #: src/merge/timestamp_factory.cpp:244
 #, no-c-format
 msgid "The 'ranges' key must exist & be an array."
-msgstr ""
+msgstr "'Rekkevidde'-nøkkelen må eksistere og være en matrise."
 
 #: src/merge/timestamp_factory.cpp:366
 #, no-c-format
 msgid "The 'timestamps' key must exist & be an array."
-msgstr ""
+msgstr "'Tidsstempel'-nøkkelen må eksistere og være en matrise."
 
 #: src/input/r_vobsub.cpp:257
 #, no-c-format
@@ -13537,7 +13537,7 @@ msgstr "Egenskapsverdien er ikke et gyldig usignert heltall i '{0}'. {1}\n"
 #: src/merge/timestamp_factory.cpp:254
 #, no-c-format, c++-format
 msgid "The range number {0} must be an object with keys 'start', 'end' & 'fps'."
-msgstr ""
+msgstr "Rekkeviddenummeret {0} må være et objekt med nøklene 'start', 'end' og 'fps'."
 
 #: src/merge/output_control.cpp:1087
 #, no-c-format
@@ -13764,14 +13764,14 @@ msgstr "Tidsstempelfilen '{0}' inneholder ingen gyldig oppføring.\n"
 #: src/merge/timestamp_factory.cpp:254
 #: src/merge/timestamp_factory.cpp:366
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp file '{0}' is invalid: {1}\n"
-msgstr "Tidsstempelfilen '{0}' inneholder ingen gyldig oppføring.\n"
+msgstr "Tidsstempelfilen '{0}' er ugyldig: {1}\n"
 
 #: src/merge/timestamp_factory.cpp:374
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The timestamp number {0} must be an integer or floating point number."
-msgstr "Linjen {0} i tidsstempelfilen '{1}' inneholder ikke et gyldig flyttall.\n"
+msgstr "Tidsstempelnummeret {0} må være et heltall eller flyttall."
 
 #: src/merge/timestamp_factory.cpp:309
 #, no-c-format, c++-format
