--- a/doc/man/po4a/po/nb.po
+++ b/doc/man/po4a/po/nb.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Roger Knutsen, 2024\n"
+"Last-Translator: Roger Knutsen, 2024-2025\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/nb/)\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
@@ -3644,13 +3644,13 @@ msgstr "Leser flere kommandolinjeargumenter fra filen <parameter>alternativer-fi
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2391
 msgid "If you want to use the <literal>@</literal> sign as the first character in the argument to an option such as '<literal>--title</literal>', you have to escape it with a second <literal>@</literal> sign. Example:"
-msgstr ""
+msgstr "Hvis du vil bruke <literal>@</literal>-tegnet som det første tegnet i argumentet til et alternativ som '<literal>--tittel</literal>', må du maskere det med et andre <literal>@</literal>-tegn. Eksempel:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><screen>
 #: doc/man/mkvmerge.xml:2395
 #, no-wrap
 msgid "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
-msgstr ""
+msgstr "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2400
