update AUTHORS & NEWS for LOAS/LATM parser fix

--- a/AUTHORS
+++ b/AUTHORS
@@ -309,6 +309,8 @@ Shailesh L Mistry <shailesh.mistry@milan.eclipse.co.uk>
 
 Stefan Pöschel <basic.master@gmx.de>
     * Bugfixes for open GOPs after I frames in MPEG-1/2 video
+    * Bugfixes for the AAC LOAS/LATM parser wrt. parsing
+      `StreamMuxConfig` elements
 
 Stefano Codari <l.stickell@yahoo.it>
     * Italian translation
