update AUTHORS & NEWS for --disable-dbus configure option

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,9 @@ Andrew Dvorak <acdvorak@gmail.com>
 Andriy Bilous'ko <arestarh@ukr.net>
     * Ukrainian translation
 
+Anthony Ryan <anthonyryan1@gmail.com>
+    * Option to configure for disabling QtDBus support
+
 Antoni Bella Pérez <antonibella5@yahoo.com>
     * Catalan translation
 
