program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-12-27 18:54+0100\n"
-"PO-Revision-Date: 2025-01-15 21:31+0100\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2025\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -3858,7 +3858,7 @@ msgstr "Sem&pre usar l'acció seleccionada a dalt i no tornis a preguntar"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1049
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Sempre"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -8462,7 +8462,7 @@ msgstr "Els fitxers d'opcions JSON han de contenir una matriu JSON que consistei
 #: src/merge/timestamp_factory.cpp:97
 #, no-c-format
 msgid "JSON timestamp files must contain a JSON object with a 'version' key.\n"
-msgstr ""
+msgstr "Els fitxers de marca de temps JSON han de contenir un objecte JSON amb una clau «version».\n"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:675
 #, no-c-format
