--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-12-27 19:32+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2025\n"
 "Language-Team: Catalan (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -3646,13 +3646,13 @@ msgstr "Llegeix els arguments addicionals per a la línia d'ordres des del fitxe
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2391
 msgid "If you want to use the <literal>@</literal> sign as the first character in the argument to an option such as '<literal>--title</literal>', you have to escape it with a second <literal>@</literal> sign. Example:"
-msgstr ""
+msgstr "Si voleu utilitzar el signe <literal>@</literal> com a primer caràcter de l'argument d'una opció com ara «<literal>--title</literal>», haureu d'escapar-lo amb un segon signe <literal>@</literal>. Exemple:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><screen>
 #: doc/man/mkvmerge.xml:2395
 #, no-wrap
 msgid "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
-msgstr ""
+msgstr "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2400
