--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-12-27 18:54+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2024\n"
+"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2025\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -3835,7 +3835,7 @@ msgstr "Sem&pre usar a ação selecionada acima e não perguntar novamente"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1049
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Sempre"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
