program translations: update Romanian

--- a/po/ro.po
+++ b/po/ro.po
@@ -10,8 +10,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-12-27 18:54+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Daniel <danny3@tutanota.com>, 2016-2018,2021-2022\n"
-"Language-Team: Romanian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ro/)\n"
+"Last-Translator: Daniel <danny3@tutanota.com>, 2016-2018,2021-2022,2025\n"
+"Language-Team: Romanian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ro/)\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6586,12 +6586,12 @@ msgstr ""
 #: src/common/audio_emphasis.cpp:53
 #, no-c-format
 msgid "FM radio in Europe"
-msgstr ""
+msgstr "Radio FM în Europa"
 
 #: src/common/audio_emphasis.cpp:54
 #, no-c-format
 msgid "FM radio in the USA"
-msgstr ""
+msgstr "Radio FM în SUA"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:273
 #, no-c-format
@@ -9448,7 +9448,7 @@ msgstr "Nu&măr de intrări de creat:"
 #: src/common/stereo_mode.cpp:102
 #, no-c-format
 msgid "Number"
-msgstr ""
+msgstr "Număr"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2229
 #, fuzzy, no-c-format
