translations: update list of translatable strings; update German translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-02-08 12:15+0100\n"
+"POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2025\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
@@ -835,8 +835,8 @@ msgstr "PGSSUP"
 
 #: src/common/file_types.cpp:100
 #, no-c-format
-msgid "QuickTime/MP4"
-msgstr "QuickTime/MP4"
+msgid "MP4/QuickTime"
+msgstr "MP4/QuickTime"
 
 #: src/common/file_types.cpp:101
 #, no-c-format
