--- a/po/be.po
+++ b/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 82.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-02-08 12:15+0100\n"
+"POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Prydespar <prydespar@gmail.com>, 2024\n"
 "Language-Team: Belarusian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/be/)\n"
@@ -833,8 +833,8 @@ msgstr "PGSSUP"
 
 #: src/common/file_types.cpp:100
 #, no-c-format
-msgid "QuickTime/MP4"
-msgstr "QuickTime/MP4"
+msgid "MP4/QuickTime"
+msgstr "MP4/QuickTime"
 
 #: src/common/file_types.cpp:101
 #, no-c-format
