--- a/po/ja.po
+++ b/po/ja.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-02-08 12:15+0100\n"
+"POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: NipponGo, 2020\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
@@ -832,8 +832,8 @@ msgstr "PGSSUP"
 
 #: src/common/file_types.cpp:100
 #, no-c-format
-msgid "QuickTime/MP4"
-msgstr "QuickTime/MP4"
+msgid "MP4/QuickTime"
+msgstr "MP4/QuickTime"
 
 #: src/common/file_types.cpp:101
 #, no-c-format
