--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-8.3.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-02-08 12:15+0100\n"
+"POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>, 2019-2021\n"
 "Language-Team: Serbian (Serbia) (http://www.transifex.com/moritz-bunkus/"
@@ -834,7 +834,7 @@ msgstr "Пгс-Суп"
 
 #: src/common/file_types.cpp:100
 #, no-c-format
-msgid "QuickTime/MP4"
+msgid "MP4/QuickTime"
 msgstr "Квик-тајм/Мп4"
 
 #: src/common/file_types.cpp:101
