--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-02-08 12:15+0100\n"
+"POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2020,2022-2023\n"
 "Language-Team: Chinese (Singapore) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_SG/)\n"
@@ -830,8 +830,8 @@ msgstr "PGSSUP"
 
 #: src/common/file_types.cpp:100
 #, no-c-format
-msgid "QuickTime/MP4"
-msgstr "QuickTime/MP4"
+msgid "MP4/QuickTime"
+msgstr "MP4/QuickTime"
 
 #: src/common/file_types.cpp:101
 #, no-c-format
