--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (90.0-0~bunkus01) oracular; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 08 Feb 2025 14:26:32 +0100
+
 mkvtoolnix (89.0-0~bunkus01) oracular; urgency=low
 
   * New version.
