program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-08 14:22+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: BouRock, 2016-2024\n"
+"Last-Translator: BouRock, 2016-2025\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
 "Language: tr\n"
@@ -3020,12 +3020,12 @@ msgstr "Yakalanan istisna"
 #: src/common/locale.cpp:131
 #, no-c-format, c++-format
 msgid "Could not initialize the iconv library for the conversion from {0} to UTF-8. Some strings will not be converted to UTF-8 and the resulting Matroska file might not comply with the Matroska specs (error: {1}, {2}).\n"
-msgstr ""
+msgstr "{0} biçiminden UTF-8'e dönüşüm için iconv kütüphanesi başlatılamadı. Bazı dizgiler UTF-8'e dönüştürülmeyecek ve ortaya çıkan Matroska dosyası Matroska özelliklerine uymayabilir (hata: {1}, {2}).\n"
 
 #: src/common/locale.cpp:138
 #, no-c-format, c++-format
 msgid "Could not initialize the iconv library for the conversion from UTF-8 to {0}. Some strings cannot be converted from UTF-8 and might be displayed incorrectly (error: {1}, {2}).\n"
-msgstr ""
+msgstr "UTF-8'den {0} biçimine dönüşüm için iconv kütüphanesi başlatılamadı. Bazı dizgiler UTF-8'den dönüştürülemez ve yanlış görüntülenebilir (hata: {1}, {2}).\n"
 
 #: src/common/memory.cpp:150
 #, no-c-format, c++-format
