translations: fix spelling mistake

--- a/po/be.po
+++ b/po/be.po
@@ -10349,7 +10349,7 @@ msgstr "&Атрымліваць пазнаку субцітраў «прымус
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Вымаць пазнаку &hearing impair для аўдыя/субцітраў з імяў файла:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
