--- a/po/ca.po
+++ b/po/ca.po
@@ -10380,7 +10380,7 @@ msgstr "Obtén l'e&tiqueta «Força el mostrar» per als subtítols a partir del
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Obtén l'etiqueta «discapacitat auditiva» per a àudio i subtítols a partir dels noms de fitxer:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
