--- a/po/cs.po
+++ b/po/cs.po
@@ -10314,7 +10314,7 @@ msgstr "Odvozování jazyků stop z názvů souborů"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Odvozování jazyků stop z názvů souborů"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
