--- a/po/de.po
+++ b/po/de.po
@@ -10332,7 +10332,7 @@ msgstr "»Anzeige erzwingen«-&Schalter für Unteritel von Dateinamen ableiten:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "»&Hörgeschädigt«-Schalter für Audio/Unteritel von Dateinamen ableiten:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
