--- a/po/es.po
+++ b/po/es.po
@@ -10397,7 +10397,7 @@ msgstr "Deducir el in&dicador de \"visualización forzada\" de los subtítulos a
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Derive el indicador \"Personas con Discapacidad Auditiva\" para audio/subtítulos a partir de nombres de archivos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
