--- a/po/eu.po
+++ b/po/eu.po
@@ -10308,7 +10308,7 @@ msgstr "Bide hizkuntzak agiri izenetatik eratortzen"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Bide hizkuntzak agiri izenetatik eratortzen"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
