--- a/po/fr.po
+++ b/po/fr.po
@@ -10322,7 +10322,7 @@ msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres depu
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Dériver l'indicateur « &malentendant » pour l'audio/les sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
