--- a/po/it.po
+++ b/po/it.po
@@ -10335,7 +10335,7 @@ msgstr "Deriva il flag \"visualizzazione forzata\" per i sottotitoli dai nomi de
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Deriva il flag \"&problemi uditivi\" per audio/sottotitoli dai nomi dei file:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
