--- a/po/lt.po
+++ b/po/lt.po
@@ -10153,7 +10153,7 @@ msgstr "Nurodykite kalbą:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Nurodykite kalbą:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
