--- a/po/nl.po
+++ b/po/nl.po
@@ -10299,7 +10299,7 @@ msgstr "\"& geforceerd weergeven\"-vlag voor ondertiteling afleiden uit bestands
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "\"& slechthorend\"-vlag voor audio/ondertiteling afleiden uit bestandsnamen:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
