--- a/po/pl.po
+++ b/po/pl.po
@@ -10309,7 +10309,7 @@ msgstr "Pobieranie języków ścieżek z nazw plików"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Pobieranie języków ścieżek z nazw plików"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
