--- a/po/pt.po
+++ b/po/pt.po
@@ -10319,7 +10319,7 @@ msgstr "Obter idiomas das pistas a partir dos ficheiros"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Obter idiomas das pistas a partir dos ficheiros"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
