--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10343,7 +10343,7 @@ msgstr "Derivar dos nomes dos arquivos a fla&g \"exibição forçada\" para as l
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Derivar a flag \"deficientes a&uditivos\" para áudio/legendas a partir de nomes de arquivos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
