--- a/po/ru.po
+++ b/po/ru.po
@@ -10063,7 +10063,7 @@ msgstr "Извлекать флаг субтитров \"&принудитель
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Извлекать флаг \"для слаб&ослышащих\" для аудио/субтитров из имён файлов:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
