--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -10328,7 +10328,7 @@ msgstr "Izvođenje jezika staza iz naziva fajla"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Izvođenje jezika staza iz naziva fajla"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
