--- a/po/tr.po
+++ b/po/tr.po
@@ -10298,7 +10298,7 @@ msgstr "Dosya adlarından altyazılar için \"zorunlu görüntüle\" iş&aretini
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Dosya adlarından ses/altyazılar için \"&işitme engelliler\" işaretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
