--- a/po/uk.po
+++ b/po/uk.po
@@ -10301,7 +10301,7 @@ msgstr "Витягувати прапорець субтитрів \"&приму
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Витягувати прапорець \"для слабких\" для аудіо/субтитрів з імен файлів:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
