--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10262,7 +10262,7 @@ msgstr "以檔案的名稱為軌道預設語言"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "以檔案的名稱為軌道預設語言"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
