--- a/po/ja.po
+++ b/po/ja.po
@@ -10291,7 +10291,7 @@ msgstr "デフォルトで設定するトラックの言語"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "デフォルトで設定するトラックの言語"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
