--- a/po/ko.po
+++ b/po/ko.po
@@ -10265,7 +10265,7 @@ msgstr "파일명에서 트랙 언어 얻는 중"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "파일명에서 트랙 언어 얻는 중"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
