--- a/po/nb.po
+++ b/po/nb.po
@@ -10308,7 +10308,7 @@ msgstr "Utled \"tvungen visning\" fla&gg for undertekster fra filnavn:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Utled \"&hørselshemmet\" flagg for lyd/undertekster fra filnavn:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
