--- a/po/ro.po
+++ b/po/ro.po
@@ -10076,7 +10076,7 @@ msgstr "Limbile implicite pentru piste de stabilit"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Limbile implicite pentru piste de stabilit"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
