--- a/po/sv.po
+++ b/po/sv.po
@@ -10085,7 +10085,7 @@ msgstr "Ställ in språk till:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Ställ in språk till:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
