--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -10249,7 +10249,7 @@ msgstr "根据文件名推断 ｢强制显示｣ 标记 (&G):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "根据音频、字幕文件的名称推断 ｢听觉障碍｣ 标签(&H):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
