--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -10241,7 +10241,7 @@ msgstr "根据文件名推断 ｢强制显示｣ 标记 (&G):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
-msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
+msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "根据文件名推断 ｢强制显示｣ 标记 (&G):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2318
