--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-23 14:10+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2025\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -9886,19 +9886,19 @@ msgid "Add files from clip&board"
 msgstr "Ajouter des fichiers depuis le &presse-papiers"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:770
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file"
-msgstr "Enregistrer le fichier de paramètres sous"
+msgstr "Enregistrer tous les paramètres en un fichier unique"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:772
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Ctrl+Shift+S"
-msgstr "Ctrl+Shift+L"
+msgstr "Ctrl+Maj+S"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:774
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file as"
-msgstr "Enregistrer le fichier de paramètres sous"
+msgstr "Enregistrer tous les paramètres en un fichier unique sous"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:775
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:777
