--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-23 14:10+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2025\n"
+"Last-Translator: Andrei Stepanov, 2018-2025\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -9627,19 +9627,19 @@ msgid "Add files from clip&board"
 msgstr "Добавить файлы из &буфера обмена"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:770
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file"
-msgstr "Сохранить настройки обработки в файл"
+msgstr "Сохранить все настройки в один файл"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:772
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Ctrl+Shift+S"
-msgstr "Ctrl+Shift+L"
+msgstr "Ctrl+Shift+S"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:774
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file as"
-msgstr "Сохранить настройки обработки в файл"
+msgstr "Сохранить все настройки в один файл как"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:775
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:777
