program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -9862,19 +9862,19 @@ msgid "Add files from clip&board"
 msgstr "&Panodan dosyaları ekle"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:770
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file"
-msgstr "Ayarlar dosyasını farklı kaydet"
+msgstr "Tüm ayarları tek dosyaya kaydet"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:772
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Ctrl+Shift+S"
-msgstr "Ctrl+Shift+L"
+msgstr "Ctrl+ÜstKarakter+S"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:774
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file as"
-msgstr "Ayarlar dosyasını farklı kaydet"
+msgstr "Tüm ayarları tek dosyaya farklı kaydet"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:775
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:777
