program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-23 20:23+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Casper, 2023-2024\n"
+"Last-Translator: Casper, 2023-2025\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -8275,7 +8275,7 @@ msgstr "El archivo del código de tiempo '{0}' con tiene formato de línea no co
 #: src/merge/timestamp_factory.cpp:98
 #, no-c-format
 msgid "JSON timestamp files must contain a JSON object with a 'version' key.\n"
-msgstr ""
+msgstr "Los archivos de marca de tiempo JSON deben contener un objeto JSON con una clave 'versión'.\n"
 
 #: src/merge/timestamp_factory.cpp:121
 #, no-c-format, c++-format
@@ -9961,19 +9961,19 @@ msgid "Add files from clip&board"
 msgstr "Añadir archivos del portapape&les"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:770
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file"
-msgstr "Guardar archivo de opciones como"
+msgstr "Guardar todas las configuraciones en un solo archivo"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:772
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Ctrl+Shift+S"
-msgstr "Ctrl+Shift+L"
+msgstr "Ctrl+Shift+S"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:774
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file as"
-msgstr "Guardar archivo de opciones como"
+msgstr "Guarde todas las configuraciones en un solo archivo como"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:775
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:777
